# ai-consultant

./: .gitignore  .windsurfrules  README.md  summary.md
.circleci/: config.yml
agents/ai-consultant-agent/: README.md  pyproject.toml  requirements.txt
agents/ai-consultant-agent/ai_consultant_agent/: __init__.py  agent.py
agents/ai-consultant-agent/deployment/: agent_resource.txt  delete_agents.py  deploy.py
agents/ai-consultant-agent/langchian_agent/: __init__.py  langchain_agent.py  prompts.py
baid-ci/: README.md  __init__.py  install.sh  main.py  obfuscate.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
baid-sync/: README.md  __init__.py  main.py  pyproject.toml  setup.py
infra/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
intelij-plugin/: DEPLOYMENT.md  build.gradle.kts  gradle.properties  settings.gradle.kts
server/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
server/.claude/: settings.local.json
server/api_requests/: tenant_requests.http
server/baid_server/: config.py  generate_token.py  main.py
server/baid_server/api/: dependencies.py
server/baid_server/api/middleware/: __init__.py  token_limit_middleware.py
server/baid_server/api/routes/: __init__.py  agent.py  api_key.py  auth.py  auth_api_key.py  ci_error.py  sessions.py  sync.py  tenant.py  users.py  waitlist.py
server/baid_server/core/: models.py
server/baid_server/core/parser/: agent_response.py  code_chunker.py  tree_sitter_parser.py
server/baid_server/db/: database.py  dependencies.py
server/baid_server/db/repositories/: global_settings_repository.py  message_repository.py  session_repository.py  tenant_repository.py  user_repository.py  waitlist_repository.py
server/baid_server/models/: agent_response.py  api_key.py  auth.py  ci_error.py  sync.py  tenant.py  user.py  waitlist.py
server/baid_server/prompts/: __init__.py  format.py
server/baid_server/services/: agent_service.py  api_key_service.py  auth_service.py  ci_error_service.py  dependencies.py  langchain_agent_service.py  message_service.py  service_factory.py  session_service.py  sync_service.py  tenant_service.py  user_service.py  waitlist_service.py
server/baid_server/static/js/: users-dashboard.js
server/baid_server/templates/users/: dashboard.html
server/baid_server/utils/: ci_response_parser.py  git_utils.py  logging.py  response_parser.py
server/migrations/: 000001_init_schema.sql  000002_create_waitlist_table.sql  000003_create_api_keys_table.sql  000004_add_sample_data.sql  000004_add_tenants.sql  000004_add_user_limits.sql  000005_add_user_limits.sql
server/scripts/: generate_git_info.py  run_migrations.py
server/tests/: test_sync_api.py
server/tests/core/parser/: test_code_chunker.py
server/tests/unit/: test_code_chunker.py  test_token_limit_middleware.py
test-project/: sample.txt
website/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  (+2 more)
(+95 files in other folders)
