[tool.poetry]
name = "baid-server"
version = "0.1.0"
description = ""
authors = ["Sriram K K <sriram@beskar.tech>"]
[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
