[tool.poetry]
name = "baid-server"
version = "0.1.0"
description = ""
authors = ["Sriram K K <sriram@beskar.tech>"]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
structlog = "^25.3.0"
pytest = "^8.3.5"
tree-sitter = "0.19.0"
setuptools = "^80.1.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
