[project]
name = "ai-consultant-agent"
version = "0.1.0"
description = "The Beskar Team Selection Agent analyzes project requirements and recommends the most appropriate developers from the Beskar team."
authors = [
    { name = "Narasimha Prasad D", email = "narasimha.d.prasad@gmail.com" }
]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-adk = ">=0.0.2"
google-genai = "^1.9.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
google-cloud-aiplatform = { extras = ["adk", "agent-engines"], version = "^1.88.0" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
google-adk = { version = ">=0.0.2", extras = ["eval"] }
pytest = "^8.3.5"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.adk.models]
llama3.2 = { provider = "ollama", model = "llama3.2" }